--- a/src/main/resources/templates/Frontend/Main/CheckOut.mustache
+++ b/src/main/resources/templates/Frontend/Main/CheckOut.mustache
@@ -264,8 +264,7 @@
                     </svg>
                 </a></li>
                 <li class="nav-item dropdown" id="user1">
-                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown"
                          style="position: absolute !important;">
                         <a class="dropdown-item" href="#">Settings</a>
