--- a/src/main/resources/static/css/Main/style.css
+++ b/src/main/resources/static/css/Main/style.css
@@ -3,7 +3,7 @@ body { font-family: 'Open Sans', sans-serif; font-size: 15px; font-weight: 400; 
 
 strong { font-weight: 600; }
 
-a { color: #a365bc; border-bottom: 1px dashed #a365bc; text-decoration: none; transition: all .3s; }
+a { color: #ffffff; text-decoration: none; transition: all .3s; }
 a:hover, a:focus { color: #a365bc; border: 0; text-decoration: none; }
 
 h1, h2 { margin-top: 10px; font-size: 38px; font-weight: 300; color: #555; line-height: 50px; font-style: italic; }
@@ -16,7 +16,218 @@ img { max-width: 100%; }
 ::-moz-selection { background: #8542a0; color: #fff; text-shadow: none; }
 ::selection { background: #8542a0; color: #fff; text-shadow: none; }
 
+ .card-body-prod {
+            padding: 0;
+        }
 
+        .hero--video {
+            display: flex;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            min-height: 600px;
+        }
+
+        .navbar-fixed-top {
+            top: -70px;
+            opacity: 0;
+        }
+
+        .hero-image {
+            position: absolute;
+            z-index: 1;
+            width: 100%;
+            height: 600px;
+            margin: 0 auto;
+            right: 0;
+            left: 0;
+            -o-object-fit: cover;
+            object-fit: cover;
+        }
+
+        .hero .search {
+            position: relative;
+            vertical-align: middle;
+            z-index: 2;
+        }
+
+        .hero .search input {
+            width: 100%;
+            height: 76px;
+            line-height: 76px;
+            border: 1px solid #111;
+            background: rgba(0, 0, 0, 0.8);
+            font-size: 27px;
+            padding: 5px 5px 5px 47px;
+            color: #fff;
+            position: relative;
+            border-radius: 0;
+        }
+
+        .hero .search button {
+            position: absolute;
+            top: 6px;
+            right: 6px;
+            color: #fff;
+            background: #88687b;
+            font-size: 27px;
+            height: 65px;
+            line-height: 65px;
+            width: 68px;
+            padding: 0;
+            border: 0;
+        }
+
+footer {
+  text-align: center;
+  background-color: #000;
+  color: #000;
+  position: fixed;
+  padding:0;
+  bottom: 0;
+  width: 100%;
+  height:30px;
+
+}
+.social{
+    padding-bottom:15px;
+
+}
+
+
+
+        .content {
+            width: 94%;
+            margin: 4em auto;
+            font-size: 20px;
+            line-height: 30px;
+            text-align: justify;
+        }
+
+        .logo {
+            line-height: 60px;
+            position: fixed;
+            float: left;
+            margin: 16px 46px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 20px;
+            letter-spacing: 2px;
+        }
+        .userMenu {
+            line-height: 60px;
+            position: fixed;
+            float: right;
+            margin: 16px 46px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 20px;
+            letter-spacing: 2px;
+        }
+
+        nav {
+            position: fixed;
+            width: 100%;
+            line-height: 60px;
+            z-index: 3;
+        }
+
+        nav ul {
+            line-height: 60px;
+            list-style: none;
+            background: rgba(0, 0, 0, 0);
+            color: #fff;
+            padding: 0;
+            text-align: right;
+            margin: 0;
+            padding-right: 40px;
+            transition: 1s;
+        }
+
+        nav.black ul {
+            background: #000;
+        }
+
+        nav ul li {
+            display: inline-block;
+            padding: 16px 40px;;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #fff;
+            font-size: 16px;
+        }
+
+        .menu-icon {
+            line-height: 60px;
+            width: 100%;
+            background: #000;
+            text-align: right;
+            box-sizing: border-box;
+            padding: 15px 24px;
+            cursor: pointer;
+            color: #fff;
+            display: none;
+        }
+        .user2 {     
+                display:none;
+        }
+.card-columns{
+              column-count: 4;
+        }
+
+        @media (max-width: 786px) {
+          
+
+           #user1 { 
+            display:none;
+        }
+        .user2 {
+             display:inline-block;       
+        }
+
+            .logo {
+                position: fixed;
+                top: 0;
+                margin-top: 16px;
+            }
+
+            nav ul {
+                max-height: 0px;
+                background: #000;
+            }
+             nav {
+                overflow:hidden;
+            }
+
+            nav.black ul {
+                background: #000;
+            }
+
+            .showing {
+                max-height: 34em;
+                overflow: visible;
+            }
+
+            nav ul li {
+                box-sizing: border-box;
+                width: 100%;
+                padding: 5px;
+                text-align: center;
+            }
+
+            .menu-icon {
+                display: block;
+            }
+            .card-columns{
+              column-count: 1;
+        }
+
+        }
+        
+
+        
 /***** General style, all sections *****/
 ul.dropdown-cart{
     min-width:250px;
@@ -613,5 +824,4 @@ ul.dropdown-cart li .item-right button{
 
 /***** Footer *****/
 
-footer { padding: 40px 0; }
 
