--- a/src/main/resources/static/css/User/userstyles.css
+++ b/src/main/resources/static/css/User/userstyles.css
@@ -37,7 +37,7 @@
 }
 
 .profile-usertitle-name {
-  color: #5a7391;
+  color: #ffffff;
   font-size: 16px;
   font-weight: 600;
   margin-bottom: 7px;
@@ -3993,6 +3993,7 @@ input[type=button].btn-block {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  margin-top:25px;
 }
 
 .nav-link {
@@ -6263,7 +6264,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: black;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
@@ -10301,11 +10302,14 @@ body {
 .sb-sidenav .sb-sidenav-footer {
   padding: 0.75rem;
   flex-shrink: 0;
+  position: absolute;
+  bottom: 0;
+  width:100%;
 }
 
 .sb-sidenav-dark {
-  background-color: #212529;
-  color: rgba(255, 255, 255, 0.5);
+  background-color: black;
+  color: white;
 }
 .sb-sidenav-dark .sb-sidenav-menu .sb-sidenav-menu-heading {
   color: rgba(255, 255, 255, 0.25);
@@ -10314,7 +10318,7 @@ body {
   color: rgba(255, 255, 255, 0.5);
 }
 .sb-sidenav-dark .sb-sidenav-menu .nav-link .sb-nav-link-icon {
-  color: rgba(255, 255, 255, 0.25);
+  color: rgba(255, 255, 255, 0.5);
 }
 .sb-sidenav-dark .sb-sidenav-menu .nav-link .sb-sidenav-collapse-arrow {
   color: rgba(255, 255, 255, 0.25);
@@ -10329,7 +10333,7 @@ body {
   color: #fff;
 }
 .sb-sidenav-dark .sb-sidenav-footer {
-  background-color: #343a40;
+  background-color: black;
 }
 
 .sb-sidenav-light {
@@ -10337,7 +10341,7 @@ body {
   color: #212529;
 }
 .sb-sidenav-light .sb-sidenav-menu .sb-sidenav-menu-heading {
-  color: #adb5bd;
+  color: white;
 }
 .sb-sidenav-light .sb-sidenav-menu .nav-link {
   color: #212529;
