--- a/src/main/resources/templates/Frontend/Admin/Admin.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Admin.mustache
@@ -9,93 +9,88 @@
     <title>Dashboard - Admin</title>
     <link href="/css/User/userstyles.css" rel="stylesheet"/>
     <!--<link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"-->
-    crossorigin="anonymous"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
+
+   <style>
+ .logo {
+            line-height: 60px;
+            float: left;
+            margin: 16px 46px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 20px;
+            letter-spacing: 2px;
+        }
+
+        .sb-sidenav-dark .sb-sidenav-menu .nav-link {
+    color: white;
+}
+
+.bg-dark {
+    background-color: black;
+}
+   </style>
 </head>
-<body class="sb-nav-fixed">
-<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="/Index">Pikto</a>
-    <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i>
-    </button>
-    <!-- Navbar Search-->
-    <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <div class="input-group">
-            <input class="form-control" type="text" placeholder="Search for..." aria-label="Search"
-                   aria-describedby="basic-addon2"/>
-            <div class="input-group-append">
-                <button class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
-            </div>
+  <body class="sb-nav-fixed">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+
+ <div class="logo" >
+     <a href="http://localhost:8888/Index/"><img style="float: left; margin-right: 1%;" src="/img/pikto.png" width="100"/></a>
         </div>
-    </form>
-    <!-- Navbar-->
-    <ul class="navbar-nav ml-auto ml-md-0">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">Settings</a>
-                <a class="dropdown-item" href="#">Activity Log</a>
-                <div class="dropdown-divider"></div>
-                <form class="dropdown-item" action="/logout" method="post">
-                    <input type="hidden" name="_csrf" value=""/>
-                    <button type="submit" class="btn btn-primary">Logout</button>
-                </form>
-            </div>
-        </li>
-    </ul>
-</nav>
+          
+            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#" onclick='clicked()'><i class="fas fa-bars"></i></button>
+        <div class="d-md-inline-block ml-auto mr-0 mr-md-3 my-2 my-md-0">
+          <button type="button" class="btn btn-default btn-sm" style="color:black; background-color:white; margin-right:1.5em;">
+           Log out
+        </button>
+        </div>
+        </nav>
 <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
             <div class="sb-sidenav-menu">
+
                 <div class="profile-userpic">
-                    <img src="{{userData.pictureUrl}}"
-                         class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">
+                    <img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">
                 </div>
                 <div class="profile-usertitle">
                     <div class="profile-usertitle-name">
-                        {{userData.firstName}}
-                        <div class="profile-usertitle-name">
-                            {{userData.lastName}}
-                            <div class="profile-usertitle-name">
-                                {{userData.email}}
-                                <div class="profile-usertitle-job">
-                                    {{userData.mobileNr}}
-                                </div>
-                            </div>
-                        </div>
+                        {{userData.firstName}} {{userData.lastName}}
                     </div>
                     <div class="profile-userbuttons">
                     </div>
+                    <div style="background-color:white; width:100%; height:0.3em; margin-top:50px;">
+                     
+                    </div>
                     <div class="nav">
-                        <div class="sb-sidenav-menu-heading">Admin</div>
                         <a class="nav-link" href="http://localhost:8888/Admin">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
                         </a>
                         <a class="nav-link" href="http://localhost:8888/Admin/Products">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fab fa-product-hunt"></i></div>
                             Products
                         </a>
                         <a class="nav-link" href="http://localhost:8888/Admin/Users">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                             Users
                         </a>
                         <a class="nav-link" href="http://localhost:8888/Admin/Orders">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-receipt"></i></div>
                             Orders
                         </a>
                         <a class="nav-link" href="http://localhost:8888/Admin/Reviews">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-glasses"></i></div>
                             Reviews
                         </a>
                     </div>
+                   
                 </div>
-                <div class="sb-sidenav-footer">
-                    <div class="small">Logged in as:</div>
-                    {{userData.email}}
-                </div>
+               <div class="sb-sidenav-footer">
+                      <p data-toggle="modal" data-target="#editModal" style="float:left;"><i class="fas fa-cog" style="margin-right:5px"></i>Settings</p>
+
+                    </div>
             </div>
         </nav>
     </div>
@@ -145,47 +140,52 @@
                                                                            id="adminSummary" name="summary"
                                                                            placeholder="">
                                                                 </div>
-                                                                <div class="form-group">
-                                                                    <label for="adminproducttype">Type</label>
-                                                                    <input type="text" class="form-control"
-                                                                           id="adminproducttype" name="type"
-                                                                           placeholder="">
+                                                              
+                                                               <div class="form-group">
+                                                                <label for="admincategoryid">Category</label>
+                                                                    
+                                                               <select class="form-control" name="type">
+                                                             <option value="Nature">Nature</option>
+                                                             <option value="People">People</option>
+                                                             <option value="Buildings">Buildings</option>
+                                                             <option value="Animals">Animals</option>
+                                                             <option value="Holidays">Holidays</option>
+                                                             </select>
                                                                 </div>
+
+
                                                                 <div class="form-group">
                                                                     <label for="adminprice">Price</label>
                                                                     <input type="text" class="form-control"
                                                                            id="adminprice" name="price" placeholder="">
                                                                 </div>
                                                                 <div class="form-group">
-                                                                    <label for="admindiscount">Discount</label>
-                                                                    <input type="text" class="form-control"
-                                                                           id="admindiscount" name="discount"
-                                                                           placeholder="">
+                                                            <label for="admindiscount">Discount</label>
+                                                            <select class="form-control" name="discount">
+                                                             <option value="0"></option>
+                                                             <option value="0.1">10%</option>
+                                                             <option value="0.25">25%</option>
+                                                             <option value="0.5">50%</option>
+                                                             </select>
+                                                                   </div>
+                                                            
+                                                                 <div class="form-group">
+                                                                <label for="adminproducttype">Type</label>   
+                                                               <select class="form-control" name="categoryId">
+                                                             <option value="1">Background</option>
+                                                             <option value="2">Stockphoto</option>
+                                                             <option value="3">Poster</option>
+                                                             </select>
                                                                 </div>
-                                                                <div class="form-group">
-                                                                    <label for="admincategoryid">Category</label>
-                                                                    <input type="text" class="form-control"
-                                                                           id="admincategoryid" name="categoryId"
-                                                                           placeholder="">
-                                                                </div>
+
                                                                 <div class="form-group">
                                                                     <label for="adminproductUrl">PictureURL</label>
                                                                     <input type="text" class="form-control"
                                                                            id="adminproductUrl" name="productUrl"
                                                                            placeholder="">
                                                                 </div>
-                                                                <div class="form-group hide">
-                                                                    <label for="adminproductUrl">PictureURL</label>
-                                                                    <input type="text" class="form-control"
-                                                                           id="adminContent" name="content"
-                                                                           placeholder="">
-                                                                </div>
-                                                                <div class="form-group form-check">
-                                                                    <input type="checkbox" class="form-check-input"
-                                                                           id="exampleCheck1">
-                                                                    <label class="form-check-label" for="exampleCheck1">Check
-                                                                        me out</label>
-                                                                </div>
+                                                            
+                                                               
                                                                 <button type="submit" class="btn btn-primary">Submit
                                                                 </button>
                                                             </form>
@@ -302,10 +302,132 @@
             </div>
         </footer>
     </div>
+
+
+
+<div class="modal" tabindex="-1" role="dialog" id="editModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Edit User</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modalBody">
+                <form method="POST" action="/Admin/updateUser" novalidate>
+                   <div class="form-group row">
+                        <label for="userId" class="col-4 col-form-label">User id</label>
+                        <div class="col-8">
+                            <input id="userId" name="userId" type="text" class="form-control" value="{{userData.userId}}" readonly>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="title" class="col-4 col-form-label">Firstname</label>
+                        <div class="col-8">
+                            <input id="Firstname" name="firstName" type="text" class="form-control" value="{{userData.firstName}}">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="summary" class="col-4 col-form-label">Lastname</label>
+                        <div class="col-8">
+                            <input id="Lastname" name="lastName" type="text" class="form-control" value="{{userData.lastName}}">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="mobileNr" class="col-4 col-form-label">Phonenumber</label>
+                        <div class="col-8">
+                            <input id="mobileNr" name="mobileNr" type="text" class="form-control" value="{{userData.mobileNr}}">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="email" class="col-4 col-form-label">Email</label>
+                        <div class="col-8">
+                            <input id="email" name="email" type="text" class="form-control" value="{{userData.email}}">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="pictureUrl" class="col-4 col-form-label">Profilepicture</label>
+                        <div class="col-8">
+                            <input id="pictureUrl" name="pictureUrl" type="text" class="form-control" value="{{userData.pictureUrl}}">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                    </div>
+                </form>
+            </div>
+
+   <div style="background-color:black; width:100%; height:0.7em;">
+                     
+                    </div>
+             <div class="modal-header">
+                <h5 class="modal-title">Change password</h5>
+            </div>
+            <div class="modal-body" id="modalBody">
+                <form method="POST" action="/Admin/updateUser" novalidate>
+                   <div class="form-group row">
+                        <label for="userId" class="col-4 col-form-label">Old password</label>
+                        <div class="col-8">
+                            <input id="userId" name="userId" type="password" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="title" class="col-4 col-form-label">New password</label>
+                        <div class="col-8">
+                            <input id="Firstname" name="firstName" type="password" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="summary" class="col-4 col-form-label">New password</label>
+                        <div class="col-8">
+                            <input id="Lastname" name="lastName" type="password" class="form-control">
+                        </div>
+                    </div>       
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                    </div>
+                </form>
+            </div>
+
+            
+
+        </div>
+    </div>
 </div>
 
+    </div>
+
+
+
+
+
+
+</div>
+<script>
+
+  
+
+    // Toggle the side navigation
+    function clicked(){
+
+          var path = window.location.href; // because the 'href' property of the DOM element is the absolute path
+        $("#layoutSidenav_nav .sb-sidenav a.nav-link").each(function() {
+            if (this.href === path) {
+                $(this).addClass("active");
+            }
+        });
+
+
+
+      $("body").toggleClass("sb-sidenav-toggled");
+
+    }
+    
+</script>
+
 <script src="/js/Admin/jquery.js"></script>
-<!--<script src="/js/Admin/scripts.js"></script>-->
+<script src="/js/Admin/scripts.js"></script>
 <!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
