--- a/src/main/resources/templates/Frontend/Main/Posters.mustache
+++ b/src/main/resources/templates/Frontend/Main/Posters.mustache
@@ -18,6 +18,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <style>
+
+        @font-face {
+            font-family: moonget;
+            src: url(/font/moon_get-Heavy.ttf);
+        }
+
         .card-body-prod {
             padding: 0;
         }
@@ -26,8 +32,10 @@
             display: flex;
             -webkit-box-align: center;
             -ms-flex-align: center;
-            align-items: center;
-            min-height: 600px;
+            align-items: flex-end;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            height: 40vh;
         }
 
         .navbar-fixed-top {
@@ -80,28 +88,10 @@
             border: 0;
         }
 
-footer {
-  text-align: center;
-  background-color: #000;
-  color: #000;
-  position: fixed;
-  padding:0;
-  bottom: 0;
-  width: 100%;
-  height:30px;
-
-}
-.social{
-    padding-bottom:15px;
-
-}
-
-
-
         header {
             width: 100%;
-            height: 65vh;
-            background: url(/img/hero.png) no-repeat 50% 50%;
+            height: 70vh;
+            background: url(/img/hero4.png) no-repeat 50% 50%;
             background-size: cover;
         }
 
@@ -123,6 +113,7 @@ footer {
             font-size: 20px;
             letter-spacing: 2px;
         }
+
         .userMenu {
             line-height: 60px;
             position: fixed;
@@ -138,7 +129,7 @@ footer {
             position: fixed;
             width: 100%;
             line-height: 60px;
-            z-index: 3;
+            z-index: 255;
         }
 
         nav ul {
@@ -179,27 +170,130 @@ footer {
             color: #fff;
             display: none;
         }
-        .user2 {     
-                display:none;
+
+        .user2 {
+            display: none;
         }
-.card-columns{
-              column-count: 4;
+
+        .card-columns {
+            column-count: 4;
+        }
+
+        .profile-circel-image-50 img {
+            width: 70px;
+            height: 70px;
+            border-radius: 70px;
+            float: left;
+            object-fit: cover;
+
+        }
+
+        .profile-circel-image-50 {
+            align-items: center;
+            justify-content: center;
+            display: flex;
+        }
+
+        .vv img {
+            transition: all 0.3s ease;
+            cursor: pointer;
+        }
+
+        .vv img:hover {
+            opacity: 0.8;
+            box-shadow: 0px 0px 5px 8px rgba(0, 0, 0, 0.08);
+        }
+
+        .center {
+            padding-top: 37vh;
+            width: 20%;
+            display: inline-block;
+            flex-grow: 1;
+            align-items: center;
+
+        }
+
+        .center1 {
+            padding-top: 22vh;
+            width: 20%;
+            display: inline-block;
+            flex-grow: 1;
+            align-items: center;
+
+        }
+
+        .flex-container {
+
+            display: flex;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: flex-end;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            height: 20vh;
+
+        }
+
+      
+
+        .categoryText {
+            float: right;
+            color: white;
+            margin-left: 5%;
+            margin-top: 0;
+            margin-bottom: 0;
         }
 
         @media (max-width: 786px) {
-                header {
-            width: 100%;
-            height: 60vh;
-            background: url(/img/hero.png) no-repeat 50% 50%;
-            background-size: cover;
+            .categoryText {
+            }
+
+            .center {
+                padding-top: 25vh;
+
+            }
+
+            header {
+                width: 100%;
+                height: 60vh;
+                background: url(/img/hero4.png) no-repeat 50% 50%;
+                background-size: cover;
+            }
+
         }
 
-           #user1 { 
-            display:none;
+        .categoryText {
+            float: right;
+            color: white;
+            margin-left: 5%;
+            margin-top: 0;
+            margin-bottom: 0;
         }
-        .user2 {
-             display:inline-block;       
-        }
+
+        @media (max-width: 786px) {
+            .categoryText {
+                display: none;
+            }
+
+            .center {
+                padding-top: 25vh;
+
+            }
+
+            header {
+                width: 100%;
+                height: 60vh;
+                background: url(/img/hero4.png) no-repeat 50% 50%;
+                background-size: cover;
+            }
+
+            #user1 {
+                display: none;
+            }
+
+            .user2 {
+                display: inline-block;
+            }
 
             .logo {
                 position: fixed;
@@ -211,8 +305,9 @@ footer {
                 max-height: 0px;
                 background: #000;
             }
-             nav {
-                overflow:hidden;
+
+            nav {
+                overflow: hidden;
             }
 
             nav.black ul {
@@ -234,20 +329,19 @@ footer {
             .menu-icon {
                 display: block;
             }
-            .card-columns{
-              column-count: 1;
-        }
+
+            .card-columns {
+                column-count: 1;
+            }
 
         }
-        
 
-        
 
     </style>
 
 
 </head>
-<body >
+<body>
 <!-- Top menu -->
 
 <header>
@@ -300,38 +394,78 @@ footer {
             </ul>
         </div>
     </nav>
-    <section class="hero hero--video">
-        <div class="container">
-            <div class="col-12">
-                <div class="search">
-                    <div>
-                        <input class="input" type="text" id="searchValue" name="s" placeholder="Search for photos">
-                        <button onclick="myFunction()"><i class="fa fa-search"></i></button>
-                    </div>
-                </div>
+    <div class="flex-container">
+
+        <div class=center1 style="z-index:10;" onclick="location.href='http://localhost:8888/Index/Category/3';">
+           <h1 style="font-family:moonget; font-style:normal; color:white;">Posters</h1>
+
+        </div>
+    </div>
+
+    <div class="flex-container">
+        <div class=center>
+            <div class="profile-circel-image-50">
+                <img src="https://images.pexels.com/photos/2113566/pexels-photo-2113566.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                     class="img-fluid rounded-circle">
+                <h5 class="categoryText">Nature</h5>
             </div>
         </div>
-    </section>
+
+        <div class=center>
+            <div class="profile-circel-image-50">
+                <img src="https://images.pexels.com/photos/697243/pexels-photo-697243.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                     class="img-fluid rounded-circle">
+                <h5 class="categoryText">People</h5>
+            </div>
+        </div>
+
+        <div class=center>
+            <div class="profile-circel-image-50">
+                <img src="https://images.pexels.com/photos/936722/pexels-photo-936722.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                     class="img-fluid rounded-circle">
+                <h5 class="categoryText">Buildings</h5>
+            </div>
+        </div>
+
+        <div class=center>
+            <div class="profile-circel-image-50">
+                <img src="https://images.pexels.com/photos/247502/pexels-photo-247502.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                     class="img-fluid rounded-circle">
+                <h5 class="categoryText">Animals</h5>
+            </div>
+        </div>
+        <div class=center>
+            <div class="profile-circel-image-50">
+                <img src="https://images.pexels.com/photos/3303614/pexels-photo-3303614.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                     class="img-fluid rounded-circle">
+                <h5 class="categoryText">Holidays</h5>
+            </div>
+        </div>
+
+
+    </div>
 </header>
+
 
 <div class="container" style="max-width:90%; margin-top:1.25rem; ">
     <div class="row">
-        <div class="card-columns" >
-            {{#allProducts}}
+        <div class="card-columns" id="MyCards">
+            {{#CategoryItems}}
             <div class="card" style="margin:0; padding:0; border:0px;">
                 <div class="card-body" style="margin:0; padding:0;">
+                    <h4 style="display:none;">{{title}}</h4>
+                    <h5 class="card-title" style="display:none;">{{type}}</h5>
                     <a href="http://localhost:8888/Index/{{productId}}">
                         <img src="{{productUrl}}" alt="Italian Trulli" style="padding-bottom:1.25rem;">
                     </a>
                 </div>
             </div>
-            {{/allProducts}}
+            {{/CategoryItems}}
         </div>
     </div>
 </div>
 
 
-<!-- Footer -->
 
   <footer class="footer">
 
@@ -344,7 +478,6 @@ footer {
             </ul>
             </div>
   </footer>
-</body>
 <!-- Javascript -->
 <script src="/js/Main/jquery-3.3.1.min.js"></script>
 <script src="/js/Main/jquery-migrate-3.0.0.min.js"></script>
@@ -358,6 +491,7 @@ footer {
 <script src="/js/Main/wow.min.js"></script>
 <script src="/js/Main/scripts.js"></script>
 <script>
+
     $(document).ready(function () {
         $(".menu-icon").on("click", function () {
             $("nav ul").toggleClass("showing");
@@ -376,15 +510,23 @@ footer {
         }
     });
 
-    function myFunction() {
-        var text = document.getElementById("searchValue").value;
-        var concat = "http://localhost:8888/Index/Search/" + text;
-        window.location.replace(concat);
+    $(document).on("click", ".profile-circel-image-50", function () {
+        var clickedBtnID = $(this).find("h5").text(); // or var clickedBtnID = this.id
+        alert(clickedBtnID);
 
-    }
+        cardContainer = document.getElementById("MyCards");
+        cards = cardContainer.getElementsByClassName("card");
+        for (i = 0; i < cards.length; i++) {
+            title = cards[i].querySelector(".card-body h5.card-title");
+            if (title.innerText.indexOf(clickedBtnID) > -1) {
+                cards[i].style.display = "";
+            } else {
+                cards[i].style.display = "none";
+            }
+        }
+    });
 
-
-    var loggedin=$("#login").attr("class");
+     var loggedin=$("#login").attr("class");
     console.log(loggedin);
 
     if(loggedin==="loggedintrue"){
@@ -398,12 +540,6 @@ footer {
     }
    
 
-
-
-    
-
-  
 </script>
-
-
+</body>
 </html>
