--- a/src/main/resources/templates/Frontend/Main/ProductPage.mustache
+++ b/src/main/resources/templates/Frontend/Main/ProductPage.mustache
@@ -8,9 +8,53 @@
     <meta name="author" content=""/>
     <title>Dashboard - SB Admin</title>
     <link href="/css/Main/product.css" rel="stylesheet"/>
+    <link href="/css/Main/style.css" rel="stylesheet"/>
     <link href="/css/Main/caro.css" rel="stylesheet"/>
 
     <style>
+    .btn-grey{
+    background-color:#D8D8D8;
+	color:#FFF;
+}
+.rating-block{
+	background-color:#FAFAFA;
+	border:1px solid #EFEFEF;
+	padding:15px 15px 20px 15px;
+	border-radius:3px;
+}
+.bold{
+	font-weight:700;
+}
+.padding-bottom-7{
+	padding-bottom:7px;
+}
+
+.review-block{
+	background-color:#FAFAFA;
+	border:1px solid #EFEFEF;
+	padding:15px;
+	border-radius:3px;
+	margin-bottom:15px;
+}
+.review-block-name{
+	font-size:12px;
+	margin:10px 0;
+}
+.review-block-date{
+	font-size:12px;
+}
+.review-block-rate{
+	font-size:13px;
+	margin-bottom:15px;
+}
+.review-block-title{
+	font-size:15px;
+	font-weight:700;
+	margin-bottom:10px;
+}
+.review-block-description{
+	font-size:13px;
+}
 
     </style>
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"
@@ -18,51 +62,78 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
 </head>
-<body class="sb-nav-fixed">
-<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="/Index">Pikto</a>
-    <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i>
-    </button>
-    <!-- Navbar Search-->
-    <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <div class="input-group">
-            <input class="form-control" type="text" placeholder="Search for..." aria-label="Search"
-                   aria-describedby="basic-addon2"/>
-            <div class="input-group-append">
-                <button class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
-            </div>
+<body>
+<header>
+<nav style="background-color:black;">
+        <div class="menu-icon">
+
+           <div >
+           
         </div>
-    </form>
-    <!-- Navbar-->
-    <ul class="navbar-nav ml-auto ml-md-0">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">Settings</a>
-                <a class="dropdown-item" href="#">Activity Log</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.html">Logout</a>
-            </div>
-        </li>
-    </ul>
-</nav>
-<div id="layoutSidenav">
-    <div id="layoutSidenav_content">
+      
+            <i class="fa fa-bars fa-2x"></i>
+
+              
+        </div>
+        
+          <div class="logo" >
+     <a href="http://localhost:8888/Index/"><img style="float: left; margin-right: 1%;" src="/img/pikto.png" width="100"/></a>
+        </div>
+     
+         
+
+
+        <div class="menu">
+            <ul>
+                <li><a href="http://localhost:8888/Index/Category/1">Backgrounds</a></li>
+                <li><a href="http://localhost:8888/Index/Category/2">Stockphotos</a></li>
+                <li><a href="http://localhost:8888/Index/Category/3">Posters</a></li>
+
+                <li id="loggedinfalse"><a href="http://localhost:8888/Index/Checkout/{{sessionId}}" >
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                         class="bi bi-cart-fill"viewBox="0 0 16 16">
+                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                    </svg>
+                </a></li>
+
+                 <li id="loggedintrue" style="display:none;"><a href="http://localhost:8888/User/Checkout/{{userData.userId}}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                         class="bi bi-cart-fill"viewBox="0 0 16 16">
+                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                    </svg>
+                </a></li>
+
+
+                <a href="http://localhost:8888/User/{{userData.userId}}"><li class="loggedIn" style="display:none;" id="true"> <i class='fas fa-user-alt'  style='font-size:17px;'></i></li></a>
+
+               <a href="http://localhost:8888/login"><li class="{{loggedIn}}" id="login"> <i class='fas fa-user-alt'  style='font-size:17px;'></i></li></a>
+
+
+
+            </ul>
+        </div>
+    </nav>
+    </header>
+
+
         <main>
-            <div class="container-fluid" style="margin:auto;">
-                <div class="container" style="padding-top: 5%">
+            <div class="container" style="margin-top:50px;">
+
+
                     <div class="row">
+
                         <div class="container">
                             <div class="card">
                                 <div class="container-fliud">
                                     <div class="wrapper row">
                                         <div class="preview col-md-6">
+
                                             <div class="preview-pic tab-content">
-                                                <div class="tab-pane active" id="pic-1">
-                                                    <img src="{{Product.productUrl}}"/>
-                                                </div>
+                                                <div class="tab-pane active" id="pic-1"><img
+                                                        src="{{Product.productUrl}}"/></div>
                                             </div>
+
+
                                         </div>
                                         <div class="details col-md-6">
                                             <h3 class="product-title">{{Product.title}}</h3>
@@ -76,133 +147,99 @@
                                                 </div>
                                                 <span class="review-no">41 reviews</span>
                                             </div>
-                                            <p class="product-description">{{Product.content}}</p>
+                                            <p class="product-description">{{Product.summary}}</p>
                                             <h4 class="price">price: <span>{{Product.price}}</span></h4>
-                                            <h5 class="sizes">sizes:
-                                                <span class="size" data-toggle="tooltip" title="small">s</span>
-                                                <span class="size" data-toggle="tooltip" title="medium">m</span>
-                                                <span class="size" data-toggle="tooltip" title="large">l</span>
-                                                <span class="size" data-toggle="tooltip" title="xtra large">xl</span>
-                                            </h5>
-                                            <h5 class="colors">colors:
-                                                <span class="color orange not-available" data-toggle="tooltip"
-                                                      title="Not In store"></span>
-                                                <span class="color green"></span>
-                                                <span class="color blue"></span>
-                                            </h5>
+                                          
                                             <div class="action">
                                                 <button class="add-to-cart btn btn-default" type="button">add to cart
                                                 </button>
-                                                <button class="like btn btn-default" type="button"><span
-                                                        class="fa fa-heart"></span></button>
+                                                <button class="like btn btn-default" type="button"><span></button>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+
                     </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="rating-block">
-                                <h4>Average user rating</h4>
-                                <h2 class="bold padding-bottom-7">4.3
-                                    <small>/ 5</small>
-                                </h2>
-                                <button type="button" class="" aria-label="Left Align">
-                                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                                </button>
-                                <button type="button" class="" aria-label="Left Align">
-                                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                                </button>
-                                <button type="button" class="" aria-label="Left Align">
-                                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                                </button>
-                                <button type="button" class="" aria-label="Left Align">
-                                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                                </button>
-                                <button type="button" class="" aria-label="Left Align">
-                                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div class="review-block">
-                                    {{#Reviews}}
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <img src="http://dummyimage.com/60x60/666/ffffff&text=No+Image"
-                                                 class="img-rounded">
-                                            <div class="review-block-name"><a href="#">nktailor</a></div>
-                                            <div class="review-block-date">{{createdAt}}</div>
-                                        </div>
-                                        <div class="col-sm-9">
+
+             
+
+
+
+
+    <div class="row mb-md-2">
+      {{#Reviews}}
+        <div class="col-md-6 col-lg-4">
+                                      
+
+            <div class="card shadow-sm border-light mb-4">
+                <a href="#" class="position-relative">
+                    <img src="https://via.placeholder.com/500x350/5fa9f8/ffffff" class="card-img-top" alt="image"> </a>
+                <div class="card-body">
+                   <h5>{{title}}</h5>
+                   
+                    <div class="post-meta"><span class="small lh-120">{{createdAt}}</span></div>
+                    
+
                                             <div class="review-block-rate" id="{{rating}}">
                                                 <button type="button" id="star1" class="btn btn-default btn-grey btn-sm"
                                                         aria-label="Left Align">
                                                     <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
                                                 </button>
+
                                                 <button type="button" id="star2" class="btn btn-default btn-grey btn-sm"
                                                         aria-label="Left Align">
                                                     <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
                                                 </button>
+
                                                 <button type="button" id="star3" class="btn btn-default btn-grey btn-sm"
                                                         aria-label="Left Align">
                                                     <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
                                                 </button>
+
                                                 <button type="button" id="star4" class="btn btn-default btn-grey btn-sm"
                                                         aria-label="Left Align">
                                                     <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
                                                 </button>
+
                                                 <button type="button" id="star5" class="btn btn-default btn-grey btn-sm"
                                                         aria-label="Left Align">
                                                     <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
                                                 </button>
                                             </div>
-                                            <div class="review-block-title">{{title}}</div>
-                                            <div class="review-block-description">{{content}}</div>
-                                        </div>
-                                    </div>
-                                    {{/Reviews}}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+                       <p>{{content}}</p>
                 </div>
             </div>
-        </main>
-    </div>
-</div>
-<footer class="py-4 bg-light mt-auto">
-    <div class="container-fluid">
-        <div class="d-flex align-items-center justify-content-between small">
-            <div class="text-muted"> Copyright & copy; Your Website 2020
-            </div>
-            <div>
-                <a href="#"> Privacy
-                    Policy </a>
-                & middot;
-                <a href="#"> Terms &amp; Conditions </a>
-            </div>
         </div>
+
+     {{/Reviews}}
+
+      
+      
     </div>
-</footer>
 
 
-<script
-        src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        crossorigin="anonymous"></script>
+
+
+   </div>
+                             
+
+
+        </main>
+
+
+     
+    
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
-        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -220,17 +257,28 @@
             if (id == 2 && index2 < id) {
                 $(this).removeClass("btn btn-default btn-grey btn-sm").addClass("btn btn-warning btn-sm");
             }
+
             if (id == 3 && index2 < id) {
                 $(this).removeClass("btn btn-default btn-grey btn-sm").addClass("btn btn-warning btn-sm");
             }
+
             if (id == 4 && index2 < id) {
                 $(this).removeClass("btn btn-default btn-grey btn-sm").addClass("btn btn-warning btn-sm");
             }
+
             if (id == 5 && index2 < id) {
                 $(this).removeClass("btn btn-default btn-grey btn-sm").addClass("btn btn-warning btn-sm");
             }
+
         })
+
+        //test[0].className("btn btn-default btn-grey btn-sm");
+        /*            test[1].attr("class","btn btn-default btn-grey btn-sm");
+                    test[2].attr("class","btn btn-default btn-grey btn-sm");
+                    test[3].attr("class","btn btn-default btn-grey btn-sm");
+                    test[4].attr("class","btn btn-default btn-grey btn-sm");*/
     });
+
 </script>
 </body>
 </html>
