--- a/src/main/resources/static/css/Admin/styles.css
+++ b/src/main/resources/static/css/Admin/styles.css
@@ -6678,6 +6678,7 @@ button.bg-dark:focus {
 
 .align-content-center {
   align-content: center !important;
+  text-align: center;
 }
 
 .align-content-between {
@@ -9807,7 +9808,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #007bff !important;
+  color: black !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
