--- a/src/main/resources/templates/Frontend/Admin/Products.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Products.mustache
@@ -176,7 +176,7 @@
     </div>
 </div>
 
-<div class="modal" tabindex="-1" role="dialog" id="editModal">
+<div class="modal" tabindex="-1" role="dialog" id="productModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -353,6 +353,76 @@
     </div>
 </div>
 
+
+
+
+<div class="modal" tabindex="-1" role="dialog" id="productsModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Edit Product</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modalBody">
+                <form method="POST" action="/Admin/updateProduct" novalidate>
+                    <div class="form-group row">
+                        <label for="reviewId" class="col-4 col-form-label">Review id</label>
+                        <div class="col-8">
+                            <input id="reviewId" name="reviewId" type="text" class="form-control" readonly>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="productId" class="col-4 col-form-label">Product id</label>
+                        <div class="col-8">
+                            <input id="productId" name="productId" type="text" class="form-control" readonly>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="title" class="col-4 col-form-label">Title</label>
+                        <div class="col-8">
+                            <input id="title" name="title" type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="rating" class="col-4 col-form-label">Rating</label>
+                        <div class="col-8">
+                            <input id="rating" name="rating" type="number" class="form-control" required min="1" max="5" placeholder="max rating 5">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="createdAt" class="col-4 col-form-label">Created At</label>
+                        <div class="col-8">
+                            <input id="createdAt" name="createdAt" type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="content" class="col-4 col-form-label">Content</label>
+                        <div class="col-8">
+                            <input id="content" name="content" type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="userId" class="col-4 col-form-label">User id</label >
+                        <div class="col-8">
+                            <input id="userId" name="userId" type="number" class="form-control" readonly>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                        <a id="deletebtn" class="btn btn-danger">Delete Event</a>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
     </div>
 
 
@@ -384,14 +454,11 @@
 </script>
 
 <script src="/js/Admin/jquery.js"></script>
-<script src="/js/Admin/scripts.js"></script>
-<!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-<script src="/js/Admin/chart-area-demo.js"></script>
-<script src="/js/Admin/chart-bar-demo.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<!--<script src="/js/Admin/scripts.js"></script>-->
 <script src="/js/Admin/jquery.backstretch.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
 <script src="/js/Admin/datatables-products.js"></script>
 
 <!--<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>-->
